--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,5 +10,8 @@
     <!-- Milligram CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="/styles.css">
+
     <title>Properties Development</title>
 </head>
