--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="nav-container">
     <div class="nav-links">
-        <a href="/properties">Property List Index</a>
+        <a href="/properties">Property List</a>
         <a href="/properties/new">Add a Property</a>
     </div>
 </nav>
