--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
                     <strong>Owner:</strong> <%= property.owner %>
                 </div>
                 <div class="column column-25">
-                    <strong>Status:</strong> <%= property.completedStatus ? 'Completed' : 'In Progress' %>
+                    <strong>Status:</strong> <%= property.completed ? 'Completed' : 'In Progress' %>
                 </div>
             </div>
         <% }) %>
