started working on export/share/print functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,10 @@
                 </div>
             </div>
         <% }) %>
+        <div style="text-align: right; margin-bottom: 10px;">
+            <button id="exportButton" onclick="exportProperties()">Export Properties</button>
+        </div>
+
     </div>
 </body>
 </html>
