updated nav and removed redundancy in navigation

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,10 +7,10 @@
         <h1>Add New Property</h1>
         <form action="/properties" method="POST" style="margin-top: 20px;">
             <label for="address">Address:</label>
-            <input type="text" name="address" id="address" required class="field-long"><br>
+            <input type="text" name="address" id="address" required class="field-long" placeholder="1 Main Street Charleston SC 29489"><br>
 
             <label for="owner">Owner:</label>
-            <input type="text" name="owner" id="owner" required class="field-long"><br>
+            <input type="text" name="owner" id="owner" required class="field-long" placeholder="John Smith"><br>
 
             <label for="completed">Completed:</label>
             <input type="checkbox" name="completed" id="completed" class="field-checkbox"><br>
