--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,6 @@
 <body>
     <%- include("../views/partials/nav.ejs") %>
 
-    <!--Function that exports into CSV-->
-    <script src="../utils/export.js"></script>
-
-    <!--Function that exports into PDF-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
-
     <div class="container">
         <h1>Property List</h1>
         <% properties.forEach(property => { %>
@@ -31,8 +25,7 @@
             </div>
         <% }) %>
         <div style="text-align: right; margin-bottom: 10px;">
-            <button id="exportButton" onclick="exportProperties()">Export to CSV</button>
-            <button onclick="exportPropertiesToPDF()">Export to PDF</button>
+            <button id="printButton">Print</button>
         </div>
     </div>
 
@@ -43,6 +36,11 @@
                 row.addEventListener('click', function () {
                     window.location.href = this.getAttribute('data-href');
                 });
+            });
+
+            const printButton = document.getElementById('printButton');
+            printButton.addEventListener('click', () => {
+                window.print(); // Opens up the print dialog
             });
         });
     </script>
