--- a/views/show.ejs
+++ b/views/show.ejs
@@ -15,6 +15,20 @@
         <form action="/properties/<%= property._id %>?_method=DELETE" method="POST" style="display: inline;">
             <button type="submit" class="button" onclick="return confirm('Are you sure you want to delete this property?');">Delete</button>
         </form>
+
+        <!-- Print Button -->
+        <button id="printButton" class="button">Print</button>
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const printButton = document.getElementById('printButton');
+            if (printButton) {
+                printButton.addEventListener('click', () => {
+                    window.print();
+                });
+            }
+        });
+    </script>
 </body>
 </html>
